fix home img bottom gap

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -725,9 +725,14 @@ span {
   padding-bottom: 20px;
 }
 
-.home__featured-img img {
+.home__featured-img {
   width: 100%;
   height: 80vh;
+}
+
+.home__featured-img img {
+  height: 100%;
+  width: 100%;
   object-fit: cover;
 }
 
@@ -744,7 +749,7 @@ span {
 }
 
 @media (min-width: 900px) {
-  .home__featured-img img {
+  .home__featured-img {
     height: 80vh;
     max-height: 650px;
   }
